--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     </head>
     
     <body>
-    
+        <h1>Welcome!</h1>
+        <p>This is the best website ever.</p>
     </body>
 
 </html>
